--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@ background-image: url("Resources/ps4.jpg");
 	</figure>
 
 	<figure>
-	<img src="Resources/thelastofus.jpg">
+	<img src="Resources/lastofus.jpg">
 	<figcaption> The last of us</figcaption>
     <span class="price">£49.99</span>
     <a class="button" href="basket.html">Add to Basket</a>
@@ -58,7 +58,7 @@ background-image: url("Resources/ps4.jpg");
 	</figure>
 
 	<figure>
-	<img src="Resources/SleepingDogs.jpg">
+	<img src="Resources/Sleepingdogs.jpg">
 	<figcaption> Sleeping Dogs</figcaption>
     <span class="price">£49.99</span>
     <a class="button" href="basket.html">Add to Basket</a>
