--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ background-image: url("Resources/ps4.jpg");
 <img src="Resources/psxboxswitch.jpg" alt="psxboxswitch" width="100%" height="333">
 <!This displays an example of the games which are sold on the website and their prices.>
 <img id="myImg" src="Resources/Batman.jpg" alt="Batman &pound49.99" style="width:100%;max-width:300px">
-<img id="myImg2" src="Resources/Sleepingdogs.jpg" alt="Zelda &pound35.99" style="width:100%;max-width:300px">
+<img id="myImg2" src="Resources/Sleepingdogs.jpg" alt="Sleeping dogs &pound35.99" style="width:100%;max-width:300px">
 <img id="myImg3" src="Resources/madmax.jpg" alt="Mad max &pound59.99" style="width:100%;max-width:300px">
 <!-- The Modal -->
 <div id="myModal" class="modal">
